b=454718 Change return type of gfxPlatformGtk::DPI() from PRUint32 to double. r=roc